--- a/estilos/productos.css
+++ b/estilos/productos.css
@@ -4,6 +4,39 @@ header {
     padding: 20px 0;
 
 }
+
+.caja {
+    width: 940px;
+    position: relative;
+    margin: 0 auto;
+}
+
+
+nav{
+    position: absolute;
+    top: 110px;
+    right: 0;
+    
+}
+
+nav li {
+    display: inline;
+    margin: 0 0 0 15; /*arriba derecha abajo izquierda*/
+}
+
+nav a{
+    text-transform: uppercase;
+    color: #000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+}
+
+nav a:hover{
+    color: #C78C19;
+    text-decoration: underline;
+}
+
 .productos{
     width: 940px;
     margin: 0 auto;
@@ -54,36 +87,6 @@ header {
     margin-top: 10px;
     vertical-align: bottom;
 }
-.caja {
-    width: 940px;
-    position: relative;
-    margin: 0 auto;
-}
-nav li {
-    display: inline;
-    margin: 0 0 0 15; /*arriba derecha abajo izquierda*/
-}
-
-nav a{
-    text-transform: uppercase;
-    color: #000;
-    font-weight: bold;
-    font-size: 22px;
-    text-decoration: none;
-}
-
-nav a:hover{
-    color: #C78C19;
-    text-decoration: underline;
-}
-
-nav{
-    position: absolute;
-    top: 110px;
-    right: 0;
-    
-}
-
 footer{
     text-align: center;
     background: url("../imagenes/productos/bg.jpg");
@@ -92,4 +95,5 @@ footer{
 .copyright{
     color: white;
     font-size: 13px;
+    margin: 20px;
 }
